--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,8 @@
         <title>
             <%= title %>
         </title>
+        <link rel="stylesheet" href="/css/layout.css">
+        <%- style %>
     </head>
 
     <body>
@@ -11,5 +13,6 @@
         <%- body %>
 
         <%- include('_footer'); %>
+        <%- script %>
     </body>
 </html>
