there was problem with vendor verification, so rolled it back to user verification

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 <h1>
-    Users Profile Page
+    Codeial / Profile Page
 </h1>
 
 <p><%= user.name %></p>
