--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,37 @@
 <link rel="stylesheet" href="/css/user_profile.css">
+
+<header>
+    Page Header
+
+    <ul>
+        <% if (locals.user){ %>
+            <li>
+                <a href="/users/profile">
+                    <%= user.name %>
+                </a>
+            </li>
+            <li>
+                <a href="/users/sign-out">User Sign Out</a>
+            </li>
+        <% }else{ %>
+
+            <li>
+                <a href="/users/sign-in">User Sign In</a>
+            </li>
+
+            <li>
+                <a href="/users/sign-up">User Sign Up</a>
+            </li>
+
+
+        <% } %>
+    </ul>
+
+    
+
+
+</header>
+
 <h1>
     NDS / User Profile Page
 </h1>
