--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,3 +1,35 @@
+<header>
+    Page Header
+
+    <ul>
+        <% if (locals.user){ %>
+            <li>
+                <a href="/users/profile">
+                    <%= user.name %>
+                </a>
+            </li>
+            <li>
+                <a href="/users/sign-out">User Sign Out</a>
+            </li>
+        <% }else{ %>
+
+            <li>
+                <a href="/users/sign-in">User Sign In</a>
+            </li>
+
+            <li>
+                <a href="/users/sign-up">User Sign Up</a>
+            </li>
+
+
+        <% } %>
+    </ul>
+
+    
+
+
+</header>
+
 <h1>User Sign Up</h1>
 
 <form action="/users/create" method="POST">
