--- a/views/vendor_sign_up.ejs
+++ b/views/vendor_sign_up.ejs
@@ -1,6 +1,38 @@
+<header>
+    Page Header
+
+    <ul>
+        <% if (locals.user){ %>
+            <li>
+                <a href="/vendors/profile">
+                    <%= vendor.name %>
+                </a>
+            </li>
+            <li>
+                <a href="/vendors/sign-out">Vendor Sign Out</a>
+            </li>
+        <% }else{ %>
+    
+            <li>
+                <a href="/vendors/sign-in">Vendor Sign In</a>
+            </li>
+    
+            <li>
+                <a href="/vendors/sign-up">Vendor Sign Up</a>
+            </li>
+    
+    
+        <% } %>
+    </ul>
+
+    
+
+
+</header>
+
 <h1>Vendor Sign Up</h1>
 
-<form action="/users/create" method="POST">
+<form action="/vendors/create" method="POST">
     <input type="text" name="name" placeholder="Your Name" required>
     <input type="email" name="email" placeholder="Your Email" required>
     <input type="password" name="password" placeholder="Password" required>
