improved the frontEnd part of website

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,26 @@
 <footer>
-    Page Footer
+
+    <div class="card">
+        <div class="card-footer">
+          This Web Application is part of Software Engineering Project
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Made by Pradnyesh Aglawe</h5>
+          <p class="card-text">2018BCS-034</p>
+          <p class="card-text">Group No. 1</p>
+          <p class="card-text">Members</p>
+          <ol>
+              <li>Abhishek Singh</li>
+              <li>Pradnyesh Aglawe</li>
+              <li>Tushar Sehwag</li>
+          </ol>
+
+        </div>
+      </div>
 </footer>
+
+<style>
+    footer{
+        margin-top: 250px;
+    }
+</style>
