--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,4 +1,9 @@
-body{
-    margin: 0;
-    /* text-align: center; */
+.banner{
+    height: 100vh;
+    width: 100%;
+    background: url('https://images.unsplash.com/photo-1566378246598-5b11a0d486cc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80');
+    background-position: center;
+    background-size: cover;
+    /* background-attachment: fixed; */
+    background-repeat: no-repeat;
 }
