--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,55 +1,62 @@
 <header>
-    Page Header
 
-    <ul>
-        <% if (locals.user){ %>
-            <li>
-                <a href="/users/profile">
-                    <%= user.name %>
-                </a>
-            </li>
-            <li>
-                <a href="/users/sign-out">User Sign Out</a>
-            </li>
-        <% }else{ %>
-
-            <li>
-                <a href="/users/sign-in">User Sign In</a>
-            </li>
-
-            <li>
-                <a href="/users/sign-up">User Sign Up</a>
-            </li>
-
-
-        <% } %>
-    </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">Newspaper Distribution System</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <% if (locals.user){ %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/profile">
+                            <%= user.name %>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/sign-out">User Sign Out</a>
+                    </li>
+                <% }else{ %>
+        
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/sign-in">User Sign In</a>
+                    </li>
+        
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/sign-up">User Sign Up</a>
+                    </li>
+        
+        
+                <% } %>
+            </ul>
+        
+            <ul class="navbar-nav"> 
+                <% if (locals.vendor){ %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/vendors/profile">
+                            <%= vendor.name %>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/vendors/sign-out">Vendor Sign Out</a>
+                    </li>
+                <% }else{ %>
+            
+                    <li class="nav-item">
+                        <a class="nav-link" href="/vendors/sign-in">Vendor Sign In</a>
+                    </li>
+            
+                    <li class="nav-item">
+                        <a class="nav-link" href="/vendors/sign-up">Vendor Sign Up</a>
+                    </li>
+            
+            
+                <% } %>
+            </ul>
+        </div>
+    </nav>
 
     
 
 
 </header>
-
-<ul>
-    <% if (locals.vendor){ %>
-        <li>
-            <a href="/vendors/profile">
-                <%= vendor.name %>
-            </a>
-        </li>
-        <li>
-            <a href="/vendors/sign-out">Vendor Sign Out</a>
-        </li>
-    <% }else{ %>
-
-        <li>
-            <a href="/vendors/sign-in">Vendor Sign In</a>
-        </li>
-
-        <li>
-            <a href="/vendors/sign-up">Vendor Sign Up</a>
-        </li>
-
-
-    <% } %>
-</ul>
