--- a/views/vendor_sign_up.ejs
+++ b/views/vendor_sign_up.ejs
@@ -1,42 +1,68 @@
-<header>
-    Page Header
-
-    <ul>
-        <% if (locals.user){ %>
-            <li>
-                <a href="/vendors/profile">
-                    <%= vendor.name %>
-                </a>
-            </li>
-            <li>
-                <a href="/vendors/sign-out">Vendor Sign Out</a>
-            </li>
-        <% }else{ %>
-    
-            <li>
-                <a href="/vendors/sign-in">Vendor Sign In</a>
-            </li>
-    
-            <li>
-                <a href="/vendors/sign-up">Vendor Sign Up</a>
-            </li>
-    
-    
-        <% } %>
-    </ul>
-
-    
-
-
-</header>
-
 <h1>Vendor Sign Up</h1>
 
-<form action="/vendors/create" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required>
-    <input type="email" name="email" placeholder="Your Email" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <input type="password" name="confirm_password" placeholder="Confirm Password" required>
-    <input type="submit" value="Sign Up">
 
-</form>
+
+<form action="/vendors/create" method="POST">
+    <div class="form-group">
+      <label>Name</label>
+      <input name="name" type="text" placeholder="Name" class="form-control" aria-describedby="emailHelp">
+    </div>
+    <div class="form-group">
+        <label>Email</label>
+        <input name="email" type="text" placeholder="Email ID" class="form-control" aria-describedby="emailHelp">
+        <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label>Password</label>
+      <input name="password" type="password" placeholder="Password" class="form-control">
+    </div>
+    <div class="form-group">
+        <label>Confirm Password</label>
+        <input name="confirm_password" type="password" placeholder="Confirm Password" class="form-control">
+    </div>
+    <div class="form-group">
+        <label>Phone Number</label>
+        <input name="phone" type="tel" placeholder="Phone Number" class="form-control" aria-describedby="emailHelp">
+    </div>
+    <div class="form-group">
+        <label>Area where you live: Choose anyone from </label>
+        <ol>
+            <li>Nagpur</li>
+            <li>Indore</li>
+            <li>Bangalore</li>
+            <li>Hyderabad</li>
+        </ol>
+        <input name="area" type="text" placeholder="Area" class="form-control" aria-describedby="emailHelp">
+    </div>
+    <div class="form-group">
+        <label>Bank Name</label>
+        <input name="bankName" type="text" placeholder="Bank Name" class="form-control" aria-describedby="emailHelp">
+    </div>
+    <div class="form-group">
+        <label>Account Name</label>
+        <input name="accountName" type="text" placeholder="Account Name" class="form-control" aria-describedby="emailHelp">
+    </div>
+    <div class="form-group">
+        <label>Bank Account Number</label>
+        <input name="bankAccountNumber" type="number" placeholder="Bank Account Number" class="form-control" aria-describedby="emailHelp">
+    </div>
+    <div class="form-group">
+        <label>IFSC Code</label>
+        <input name="IFSCCode" type="text" placeholder="IFSC Code" class="form-control" aria-describedby="emailHelp">
+    </div>
+    <div class="form-group form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Ensure that every information given by you is correct to your knowledge.</label>
+    </div>
+    <button value="Sign Up" type="submit" class="btn btn-primary">Vendor Sign Up</button>
+  </form>
+
+  <style>
+    form{
+        margin: 10px;
+    }
+    h1{
+        margin: 10px;
+    }
+</style>
+
