--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -7,4 +7,14 @@
 
 <p><%= user.name %></p>
 <p><%= user.email %></p>
+<p>From area: <%= user.area %></p>
+
+<p>Subscribed to newspaper</p>
+<li><%= user.newspaperSubscribed %></li>
+
+<style>
+    p{
+        margin: 20px;
+    }
+</style>
 
