--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -19,6 +19,16 @@
         <input name="confirm_password" type="password" placeholder="Confirm Password" required class="form-control">
     </div>
     <div class="form-group">
+        <label>Choose the newspaper which you want to subscribe to: </label>
+        <ol>
+            <li>Times of India</li>
+            <li>The Hindu</li>
+            <li>The Economic Times</li>
+            <li>The Indian Express</li>
+        </ol>
+        <input name="newspaperSubscribed" type="text" placeholder="Area" required class="form-control" aria-describedby="emailHelp">
+    </div>
+    <div class="form-group">
         <label>Phone Number</label>
         <input name="phone" type="tel" placeholder="Phone Number" required class="form-control" aria-describedby="emailHelp">
     </div>
