--- a/views/vendor_profile.ejs
+++ b/views/vendor_profile.ejs
@@ -7,6 +7,9 @@
 <p><%= vendor.name %></p>
 <p><%= vendor.email %></p>
 
+<p>Delivers to area</p>
+<li><%= vendor.area %></li>
+
 <style>
     p{
         margin: 20px;
